# 3DCO

./: .gitignore  .gitlab-ci.yml  .gitmodules  AssimpLog.txt  CMakeLists.txt  README.md  launchTests.py  requirements.txt
reports/: Critical_Tests.txt
src/: lib.cpp  main.cpp
src/common/: IChunkable.h  IExecutable.h  IStrategy.h
src/hullgen/: VHACDGenerator.cpp  VHACDGenerator.h
src/log/: Log.cpp  Log.h  VHACDLogCallback.h  VHACDLogger.cpp  VHACDLogger.h
src/model/: coColored.h  coHull.cpp  coHull.h  coLight.cpp  coLight.h  coMaterial.cpp  coMaterial.h  coMesh.cpp  coMesh.h  coMeshData.cpp  coMeshData.h  coNode.cpp  coNode.h  coScene.cpp  coScene.h
src/optimization/: BufferCompressionStep.cpp  BufferCompressionStep.h  CacheOptimizationStep.cpp  CacheOptimizationStep.h  IndexingStep.cpp  IndexingStep.h  OptimizationPipeline.cpp  OptimizationPipeline.h  OptimizationStep.cpp  OptimizationStep.h  OverdrawOptimizationStep.cpp  OverdrawOptimizationStep.h  VertexFetchOptimizationStep.cpp  VertexFetchOptimizationStep.h  VertexQuantizationStep.cpp  VertexQuantizationStep.h
src/ovosdk/: OVOExporter.cpp  OVOExporter.h
src/parsing/: AssimpStrategy.cpp  AssimpStrategy.h  FileParser.cpp  FileParser.h  ParsingStrategy.cpp  ParsingStrategy.h  material_utils.cpp  material_utils.h
src/utils/: XmlPropertiesParser.cpp  XmlPropertiesParser.h  file_utils.cpp  file_utils.h  files.h  material_utils.cpp  material_utils.h  mesh_utils.h  types_utils.h
tests/: boost_test.cpp  parsing_test.cpp
tests/assets/: Eve.fbx  basescene.OVO  basescene.dae  cube.dae  cube.fbx  cube_sphere_light.fbx  cube_with_uncompressed_embedded.fbx  directional_test.OVO  directional_test.dae  mat_test.blend  mat_test.blend1  mat_test.blend11  mat_test.dae  mat_test.fbx  mat_test.glb  mat_test.mtl  mat_test.usdc  physics-properties.xml  point_test.OVO  point_test.dae  spot_test.OVO  spot_test.dae  spotlight.fbx  test.FBX  testFpsScene.FBX  testFpsScene.OVO  testPBR.OVO  untitled.blend
tests/assets/dae/: brickwall.dds  lights_scene.OVO  lights_scene.dae  pbr_scene.OVO  pbr_scene.dae  physics_scene.OVO  physics_scene.dae  textures_scene.OVO  textures_scene.dae
tests/assets/fbx/: Eye-Alien-Animal_albedo.dds  Material.001_albedo.dds  lights_scene.OVO  lights_scene.fbx  pbr_scene.OVO  pbr_scene.fbx  physics_scene.OVO  textures_scene.OVO  wood1_albedo.dds
tests/assets/gltf/: Material.001_normal.dds  Material.001_rough.dds  bricks_normal.dds  ironwall.iron_albedo.dds  leather_albedo.dds  leather_metal.dds  leather_normal.dds  lights_scene.OVO  lights_scene.gltf  metal_ruggine_metal.dds  paper_albedo.dds  paper_normal.dds  paper_rough.dds  pbr_scene.OVO  pbr_scene.gltf  physics_scene.OVO  red_bricks_albedo.dds  red_bricks_normal.dds  red_bricks_rough.dds  rock_albedo.dds  rock_normal.dds  textures_scene.OVO  wood1_normal.dds  wood1_rough.dds
tests/screenshots/: notice.txt
